Fixed Radio Buttons, & Checkboxes padding, Correct Radio Button misalignment on my Apply device, and added edit_item & radioButton classes to index.css

--- a/mobile/www/css/index.css
+++ b/mobile/www/css/index.css
@@ -569,7 +569,7 @@ md-radio-group {
 
 .list_item {
     min-height: 48px;
-    padding: 0 0 0 8px;
+    padding: 0 0 0 16px;
     vertical-align: middle;
 }
 
@@ -1001,4 +1001,22 @@ box-shadow:
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 
         0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
         0px 3px 1px -2px rgba(0, 0, 0, 0.12);
+}
+
+.radioButton {
+    margin:0; 
+    border-radius:0; 
+    text-align:left; 
+    text-transform:none;
+    height:52px;
+    vertical-align: middle;
+    line-height: 50px;
+}
+
+
+
+.edit_item {
+    min-height: 48px;
+    padding: 0 0 0 8px;
+    vertical-align: middle;
 }
